mote and measure tabs reworked

--- a/app/partials/applianceTab.html
+++ b/app/partials/applianceTab.html
@@ -63,7 +63,7 @@
    <td/>
    <td/>
    <td>
-    <span ng-hide="edit">
+    <span ng-hide="applianceEdit">
      <button type="button" ng-click="addNewAppliance()">New</button>
     </span>
    </td>
